--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
     <link href="css/main.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" charset="utf-8" src="SavePhotoPlugin.js"></script>
     <script src="js/sjcl.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </head>
